--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,10 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
+[*.html]
+indent_size = 2
