--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ indent_size = 4
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = false
-insert_final_newline = false
+insert_final_newline = true
 [*.{html,css}]
 indent_size = 2
