--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,5 @@
 website/static/css/bootstrap.min.css
 website/static/js/bootstrap.bundle.min.js
 website/static/js/jquery-3.6.0.min.js
+website/static/css/bootstrap.min.css.map
+website/static/js/bootstrap.bundle.min.js.map
